# StudySpace

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  DATABASE.md  PROJECT_SPEC.md  README.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/course/: commands.rs  error.rs  mod.rs  model.rs  repository.rs  validation.rs
src-tauri/src/database/: connection.rs  error.rs  migrations.rs  mod.rs
src-tauri/src/document/: commands.rs  error.rs  model.rs  repository.rs  service.rs
src-tauri/src/source_resource/: commands.rs  error.rs  mod.rs  model.rs  repository.rs  service.rs
src-tauri/src/week/: commands.rs  error.rs  model.rs  repository.rs  service.rs
src/app/: App.tsx  ErrorBoundary.tsx
src/course/: courseService.ts  types.ts  useCourses.ts
src/course/components/: CourseList.tsx  CourseNameDialog.tsx  DeleteCourseDialog.tsx
src/document/: documentService.ts  types.ts  useLearningDocument.ts
src/document/components/: LearningDocumentEditor.tsx
src/pages/: HomePage.tsx
src/pages/CourseDetail/: CourseDetailPage.test.tsx  CourseDetailPage.tsx
src/pages/Document/: DocumentPage.test.tsx  DocumentPage.tsx
src/pages/Home/: HomePage.test.tsx  HomePage.tsx
src/pages/Workspace/: WorkspacePage.test.tsx  WorkspacePage.tsx
src/resource/: fileKind.ts  resourceService.ts  types.ts  useResources.ts
src/styles/: global.css
src/week/: types.ts  useWeeks.ts  weekService.ts
src/workspace/: useResizablePanels.ts
(+3 files in other folders)
